2002-06-04  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (cobc_CFLAGS): -I$(top_srcdir), not -I$(top_srcdir)/lib.
	* cobc.c, parser.y, scanner.l: Updated.

2002-06-03  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (init_environment): Recognize COB_LDADD.

2002-06-03  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (cobc_LDADD): Add libsupport.a here.
	(cobc_LIBS): Removed.

2002-05-31  Keisuke Nishida  <knishida@netlab.jp>

	* functions.h: Removed.
	* tree.h (cobc_call): New field `name' and `func'.  Remove `tag'.
	(make_call): Exported
	(make_call_0, make_call_1, make_call_2, make_call_3, make_call_4):
	Defined as macros.
	(make_inline_0, make_inline_1, make_inline_2, make_inline_3,
	make_inline_4, make_call_1_list): New macros.
	* tree.c (make_call): Updated and Exported.
	(make_call_0,make_call_1,make_call_2,make_call_3,make_call_4): Removed.
	* inline.c, codegen.h: (output_goto, output_goto_depending,
	output_move, output_initialize, output_initialize_replacing,
	output_display, output_search, output_search_all,
	output_call_statement): Exported.
	* codegen.c, codegen.h: Don't include functions.h.
	* codegen.c (output_call): Updated.
	* parser.y: Updated.
	(push_call_1_list, push_inline_0, push_inline_1, push_inline_2,
	push_inline_3, push_inline_4): New macros.
	* Makefile.am (cobc_SOURCES): Updated.

2002-05-31  Keisuke Nishida  <knishida@netlab.jp>

	* Display index name with the error message.
	* codegen.c (output_refmod_offset, output_length)
	(output_field_definition): Updated.

2002-05-31  Keisuke Nishida  <knishida@netlab.jp>

	* tree.c, tree.h (cobc_return_code): New variable.
	* parser.y (call_returning): Move RETURN-CODE to RETURNING field.
	* inline.c (output_move_index): New function.
	(output_call_statement): Don't take ret.

2002-05-31  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_expr): Give field name to cob_check_numeric.
	(output_field_definition): No longer output field name.
